--- a/scss/blocks/_banner.scss
+++ b/scss/blocks/_banner.scss
@@ -2,7 +2,7 @@
 
 .banner {
     z-index: 1;
-   /*  overflow: hidden; */
+    overflow: hidden; 
     position: relative;
    
 }
