--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -10,7 +10,7 @@ footer {
     min-height: 550px;
     padding: 204px 0px 233px;
     position: relative;
-
+    overflow: hidden; 
 }
 
 
