--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -11,11 +11,12 @@
     bottom: -23%;
     left: 50%;
     transform: translateX(-50%);
-    background: url(/img/form/city.png) ;
+    background: url(/img/form/city.png);
     background-repeat: no-repeat;
     background-position: bottom;
     background-color: $white;
-    z-index: 4
+    z-index: 4;
+    overflow: hidden;
 }
 
 .form__title {
@@ -49,7 +50,7 @@
     min-width: 280px;
     gap: 28px;
     flex-direction: column;
-  
+
 }
 
 .list__item {
@@ -59,26 +60,39 @@
     font-size: clamp(1rem, 0.141vw + 0.956rem, 1.125rem);
 
 }
-.list__item::before{
+
+.list__item::before {
     content: "";
     position: absolute;
     left: -24px;
     top: 50%;
     transform: translateY(-50%);
-   
+
 }
-.list__item:nth-child(1)::before{
-    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f3c5";
+
+.list__item:nth-child(1)::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f3c5";
 }
-.list__item:nth-child(2)::before{
-    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f095";
- 
+
+.list__item:nth-child(2)::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f095";
+
 }
-.list__item:nth-child(3)::before{
-    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f01c";
+
+.list__item:nth-child(3)::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f01c";
 }
-.list__item:nth-child(4)::before{
-    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f017";
+
+.list__item:nth-child(4)::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f017";
 }
 
 
@@ -95,7 +109,8 @@ form {
     border: none;
     border-bottom: 1px solid $main-color;
 }
-.form__input::placeholder{
+
+.form__input::placeholder {
     color: $main-color;
     opacity: 0.5;
     @include description();
@@ -103,49 +118,58 @@ form {
     color: $black;
     font-size: clamp(1rem, 0.141vw + 0.956rem, 1.125rem);
 }
-.form__input:focus{
+
+.form__input:focus {
     outline: none;
 }
 
 .form__btn {
     @include btn-default(12px, 34px);
     margin-left: auto;
-   
+
     line-height: 27px;
     font-size: clamp(1rem, 0.141vw + 0.956rem, 1.125rem);
-   
+
 }
 
 //media
 
 @media screen and (max-width: 700px) {
-    .form{
-      width: clamp(280px, 80%, 700px);
+    .form {
+        width: clamp(280px, 80%, 700px);
     }
-    .form__flex{
+
+    .form__flex {
         flex-wrap: wrap;
-       justify-content: center;
+        justify-content: center;
     }
-    .list__item{
+
+    .list__item {
         text-align: center;
     }
-    .form__btn{
+
+    .form__btn {
         margin: 0;
     }
-   }
+}
+
 @media screen and (max-width: 500px) {
-    .form{
+    .form {
         width: 100%;
-     padding: 20px;
-     bottom: -50%;
+        padding: 20px;
+        bottom: -50%;
+        position: relative;
     }
-    .list__item::before{
+
+    .list__item::before {
         left: 10px;
     }
-    .form__title:before{
+
+    .form__title:before {
         display: none;
     }
-    .form__flex{
+
+    .form__flex {
         gap: 20px;
     }
-   }
+}
