--- a/scss/blocks/_gallery.scss
+++ b/scss/blocks/_gallery.scss
@@ -5,6 +5,7 @@
     padding-top: 170px;
     padding-bottom: 250px;
     position: relative;
+    overflow: hidden; 
 }
 
 .gallery__wrapper {
