--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -8,6 +8,7 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 4;
+    overflow: hidden; 
 }
 
 .wrapper {
