--- a/scss/blocks/_projects.scss
+++ b/scss/blocks/_projects.scss
@@ -4,6 +4,7 @@
 .projects{
     overflow: hidden;
     position: relative;
+    overflow: hidden; 
 }
 
 .projects__wrapper {
